--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta name="description" content="My Porfolio Site - Udacity Frontend developer (Project 1)" />
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0">
     <meta charset="utf-8">
 
     <base target="_blank">
@@ -43,7 +43,7 @@
 
     <div id="page">
       <div class="container-fluid" id="table-container">
-        <header class="row" id="header-row">
+        <div class="row" id="header-row">
           <div class="col-xs-2 col-md-1" id="menu-icon">
             <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#stopListModal">
               Stops
@@ -56,7 +56,7 @@
               <button type="submit" class="offscreen"></button>
             </form>
           </div>
-        </header>
+        </div>
         <div class="row" id="map-row">
           <div class="col-xs-12" id="map-view">
             <div id="map"></div>
