--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <div class="list-group" data-bind="template: {name: 'stop-template', foreach:stopList}"></div>
               <script type="text/html" id="stop-template">
                 <a href="javascript:;" class="list-group-item" data-bind="click: $parent.selectStop.bind($data, $index())">
-                  <span data-bind="text: result.location_name"></span>
+                  <span data-bind="text: name"></span>
                 </a>
               </script>
             </div>
@@ -65,12 +65,12 @@
       </div>
     </div>
 
-    <script type="text/javascript" src="js/lib/jquery-2.2.3.min.js"></script>
-    <script type="text/javascript" src="js/lib/bootstrap-3.3.6.min.js"></script>
-    <script type="text/javascript" src="js/lib/knockout-3.4.0.min.js"></script>
-    <script type="text/javascript" src="js/hmac-sha1.js"></script>
-    <script type="text/javascript" src="js/map.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBf8ksAmVFxAyvr9c8gsb0VUCPZYDNZxms&callback=initMap" async defer></script>
+    <script src="js/lib/jquery-2.2.3.min.js"></script>
+    <script src="js/lib/bootstrap-3.3.6.min.js"></script>
+    <script src="js/lib/knockout-3.4.0.min.js"></script>
+    <script src="js/hmac-sha1.js"></script>
+    <script src="js/map.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBf8ksAmVFxAyvr9c8gsb0VUCPZYDNZxms&callback=initMap" onerror="viewModel.errorMap()" async defer></script>
 
   </body>
 </html>
